fixed spacing/alignment on gearlist ul

--- a/app/assets/stylesheets/gear_lists.css.scss
+++ b/app/assets/stylesheets/gear_lists.css.scss
@@ -31,6 +31,7 @@ $medium-grey: #bfc0c0;
 	}
 	ul {
 		list-style: none;
+		margin-left: -3rem;
 	}
 	.gear_item {
 		display: inline-block;
